refactor: update Video component to use new bolt namespace config option being exposed

--- a/packages/components/bolt-video/src/_video-tag.twig
+++ b/packages/components/bolt-video/src/_video-tag.twig
@@ -64,6 +64,6 @@
   {% set attributes = attributes.setAttribute("is-background-video", false) %}
 {% endif %}
 
-{% set customElementName = customElementName | default("bolt-video") %}
+{% set customElementName = "#{bolt.data.config.namespace}-video" %}
 
 <{{ customElementName }} {{ attributes }}></{{ customElementName }}>
