--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -11,6 +11,7 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 #{$bolt-namespace}-video {
   display: block;
   width: 100%;
+  background-color: bolt-color(black); // placeholder color before poster loads up.
 
 // Hide the metadata (which covers the controls) if the user is either
 //   a) watching the video
