--- a/apps/pw-site/src/templates/site.twig
+++ b/apps/pw-site/src/templates/site.twig
@@ -6,12 +6,12 @@
   <title>Bolt Design System | PW Example</title>
   <meta name="description" content="Bolt Design System | PW Example">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="/build/pw.css">
+  <link rel="stylesheet" href="/bolt-scripts/pw-site/pw.css">
 </head>
 
   <body>
     {% block content %}{% endblock content %}
 
-    <script src="/build/pw.js" async></script>
+    <script src="/bolt-scripts/pw-site/pw.js" async></script>
   </body>
 </html>
