--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -2,8 +2,8 @@
    #BOLT RATIO OBJECT
    ========================================================================== */
 
-.o-bolt-ratio,
-bolt-ratio {
+.o-#{$bolt-namespace}-ratio,
+#{$bolt-namespace}-ratio {
   display: inline-block;
   vertical-align: middle; // Prevents the average background color from sometimes showing up unexpectedly due to the image being top aligned when it should have been vertically centered.
   position: relative;
@@ -23,9 +23,9 @@ bolt-ratio {
   * 1. Fallback selector if JS isn't disabled, but hasn't kicked in yet.
   * 2. Fallback selector for browsers not supporting ::slotted(*) selector
   */
-bolt-ratio > *,
-bolt-ratio img,
-.o-bolt-ratio__inner {
+#{$bolt-namespace}-ratio > *,
+#{$bolt-namespace}-ratio img,
+.o-#{$bolt-namespace}-ratio__inner {
   position: absolute;
   top: 0;
   left: 0;
@@ -35,7 +35,7 @@ bolt-ratio img,
   min-height: 100%; // workaround for content w/ hard-coded height & width
 }
 
-.o-bolt-ratio__inner ::slotted(*) {
+.o-#{$bolt-namespace}-ratio__inner ::slotted(*) {
   position: absolute;
   top: 0;
   left: 0;
