--- a/packages/global/styles/05-objects/objects-ratio/ratio.twig
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.twig
@@ -1,7 +1,3 @@
-{% set classes = [
-  "o-bolt-ratio"
-] %}
-
 {% set attributes = create_attribute(attributes | default({})) %}
 
 
@@ -9,7 +5,6 @@
 {% set aspectRatioWidth = aspectRatioWidth ? aspectRatioWidth : "1" %}
 
 {% if aspectRatioHeight and aspectRatioWidth %}
-  {% set attributes = attributes.addClass(classes) %}
   {% set attributes = attributes.setAttribute("aspect-ratio-height", aspectRatioHeight) %}
   {% set attributes = attributes.setAttribute("aspect-ratio-width", aspectRatioWidth) %}
 
@@ -20,10 +15,11 @@
   ]) %}
 {% endif %}
 
-<bolt-ratio {{ attributes }}>
-  {# <div class="o-bolt-ratio__content"> #}
-    {% block ratio_content %}
-      {{ children }}
-    {% endblock %}
-  {# </div> #}
-</bolt-ratio>
+{# Set Ratio Object Custom Element Name w/ Bolt Namespace #}
+{% set customElementName = "#{bolt.data.config.namespace}-ratio" %}
+
+<{{ customElementName }} {{ attributes }}>
+  {% block ratio_content %}
+    {{ children }}
+  {% endblock %}
+</{{ customElementName }}>
