update headline schema to properly handle null

--- a/packages/components/bolt-headline/src/headline.twig
+++ b/packages/components/bolt-headline/src/headline.twig
@@ -1,4 +1,6 @@
 {% extends "@bolt/_typography.twig" %}
+{% set schema = bolt.data.components['@bolt-components-headline'].schema %}
+
 {% set type = "headline" %}
 
 {% set styles = ["normal", "italic"] %}
