--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -1,33 +1,23 @@
 {% set schema = bolt.data.components['@bolt-components-headline'].schema %}
 {% set types = ["headline", "subheadline", "eyebrow", "text"] %} {# Pre-defined types #}
 
-{% set tags = schema.properties.tag.enum|remove_null %}
-{% set weights = schema.properties.weight.enum|remove_null %}
-{% set styles = schema.properties.style.enum|remove_null %}
-{% set transformProps = schema.properties.transform.enum|remove_null %}
-{% set sizes = schema.properties.size.enum|remove_null %}
-{% set alignments = schema.properties.align.enum|remove_null %}
-
-{% set _defaultTag = schema.properties.tag.default %}
-{% set _defaultWeight = schema.properties.weight.default %}
-{% set _defaultStyle = schema.properties.style.default %}
-{% set _defaultType = "text" %}
-{% set _defaultSize = schema.properties.size.default %}
-{% set _defaultAlignment = schema.properties.align.default %}
-{% set _defaultTransform = schema.properties.transform.default %}
-
+{% set tags = schema.properties.tag.enum %}
+{% set weights = schema.properties.weight.enum %}
+{% set styles = schema.properties.style.enum %}
+{% set transformProps = schema.properties.transform.enum %}
+{% set sizes = schema.properties.size.enum %}
+{% set alignments = schema.properties.align.enum %}
 
 {% if tags != "any" %}
-  {% set tag = tag in tags ? tag : _defaultTag %}
+  {% set tag = tag in tags ? tag : schema.properties.tag.default %}
 {% else %}
-  {% set tag = tag ?? _defaultTag %}
+  {% set tag = tag ?? schema.properties.tag.default %}
 {% endif %}
-{% set weight = weight | default(_defaultWeight) %}
-{% set style = style | default(_defaultStyle) %}
-{% set type = type in types ? type : _defaultType %}
-{% set size = size | default(_defaultSize) %}
-{% set transform = transform | default(_defaultTransform) %}
-{% set align = align in alignments ? align : _defaultAlignment %}
+{% set weight = weight | default(schema.properties.weight.default) %}
+{% set style = style | default(schema.properties.style.default) %}
+{% set type = type in types ? type : "text" %}
+{% set size = size | default(schema.properties.size.default) %}
+{% set align = align in alignments ? align : schema.properties.align.default %}
 
 {% set prefix = "c-bolt-" %}
 {% set baseClass = prefix ~ type %}
