remove remove_null filter

--- a/apps/pattern-lab/src/_patterns/02-components/button/15-button-styles.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/15-button-styles.twig
@@ -1,6 +1,6 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
-{% for style in schema.properties.style.enum|remove_null %}
+{% for style in schema.properties.style.enum %}
   <p>{{ style|capitalize }} Button States</p>
 
   {% include "@bolt-components-button/button.twig" with {
