--- a/apps/pattern-lab/src/_patterns/02-components/button/25-button-widths.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/25-button-widths.twig
@@ -1,6 +1,6 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
-{% for width in schema.properties.width.enum|remove_null %}
+{% for width in schema.properties.width.enum %}
   <p>Button Width Variations: {{ width ? width : 'Default' }}</p>
 
   {% include "@bolt-components-button/button.twig" with {
