--- a/apps/pattern-lab/src/_patterns/02-components/button/10-button-sizes.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/10-button-sizes.twig
@@ -1,6 +1,6 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
-{% for size in schema.properties.size.enum|remove_null %}
+{% for size in schema.properties.size.enum %}
   <p>Button Size Variation: {{ size }}</p>
 
   {% include "@bolt-components-button/button.twig" with {
