--- a/apps/pattern-lab/src/_patterns/02-components/button/35-button-align-items.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/35-button-align-items.twig
@@ -1,7 +1,7 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
 
-{% for align in schema.properties.align.enum|remove_null %}
+{% for align in schema.properties.align.enum %}
   <p>Align: {{ align }}</p>
 
   {% include "@bolt-components-button/button.twig" with {
