--- a/apps/pattern-lab/src/_patterns/02-components/button/40-button-transform.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/40-button-transform.twig
@@ -1,7 +1,7 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
 
-{% for transform in schema.properties.transform.enum|remove_null %}
+{% for transform in schema.properties.transform.enum %}
   <p>Transform: {{ transform }}</p>
 
   {% include "@bolt-components-button/button.twig" with {
