refactor: remove extra JS and Sass includes in lieu of simpler solution

--- a/apps/pw-site/src/index.scss
+++ b/apps/pw-site/src/index.scss
@@ -1,2 +1,2 @@
-@import './components/pw-ratio/pw-ratio.scss';
-@import './components/pw-video/pw-video.scss';
+@import '@bolt/global/styles/05-objects/objects-ratio/ratio';
+@import '@bolt/components-video';
