--- a/packages/components/bolt-dropdown/src/dropdown.scss
+++ b/packages/components/bolt-dropdown/src/dropdown.scss
@@ -8,9 +8,9 @@ bolt-dropdown {
   --bolt-nav-item-transform: translateY(bolt-spacing(large) * -1);
   --bolt-nav-indicator-opacity: 0;
 
-  bolt-navlink {
-    overflow: hidden; // Firefox: Fixes an overflow issue ONLY in context of  bolt-navlink within bolt-dropdown
-  }
+  // bolt-navlink {
+  //   // overflow: hidden; // Firefox: Fixes an overflow issue ONLY in context of  bolt-navlink within bolt-dropdown
+  // }
 
   &[collapse]{
     @include respond-to(small) {
@@ -40,6 +40,7 @@ bolt-dropdown {
 
 .c-bolt-dropdown__header {
   @include bolt-font-weight(semibold);
+  @include bolt-font-size(medium); // Normalizes line height so pre and post JS looks the same
   position: relative;
   z-index: 10;
   margin: 0;
@@ -123,7 +124,6 @@ bolt-dropdown {
 //   }
 // }
 
-
 .c-bolt-dropdown__header-button,
 .c-bolt-dropdown__header-label {
   @include bolt-padding-top(small);
@@ -140,7 +140,6 @@ bolt-dropdown {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  z-index: 2;
   width: 100%;
   font: inherit;
 
@@ -172,26 +171,31 @@ bolt-dropdown {
 }
 
 
-}
-
-
 .c-bolt-dropdown__header-link {
-  right: 0;
-  cursor: default;
-  display: none;
-  position: absolute;
-  top: 0;
-  width: 1px;
+  border: 0;
+  clip: rect(0 0 0 0);
   height: 1px;
-  z-index: 10;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap;
+  outline-offset: -3px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
-  &:focus {
-    outline-offset: -6px;
-    width: 25px;
-    height: 38px;
-    outline: 3px solid #c1e0fe;
-    outline: 3px solid rgba(131, 192, 253, .5);
-    outline-offset: 1px;
+
+  &:focus,
+  &:active {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    width: auto;
+    white-space: inherit;
   }
 }
 
@@ -199,21 +203,21 @@ bolt-dropdown {
 .c-bolt-dropdown__toggle--open {
   display: block;
 }
-.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__toggle--open,
-.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__toggle--open {
+
+.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__header-link--open,
+.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__header-link--open {
   display: none;
 }
 
-
-.c-bolt-dropdown__toggle--close {
+.c-bolt-dropdown__header-link--close {
   display: none;
 }
 
-.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__toggle--close,
-.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__toggle--close {
+.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__header-link--close,
+.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__header-link--close {
   display: block;
 }
-.c-bolt-dropdown__state:target+.c-bolt-dropdown .c-bolt-dropdown__toggle--close {
+.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__header-link--close {
   // height: 50px;
   left: 0;
   top: 0;
