Fixing Pattern Lab link from Docs site

--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -36,7 +36,7 @@
           buttons: [
             {
               text: "Explore the System",
-              url: "pattern-lab",
+              url: "/pattern-lab/index.html",
               style: "primary",
               width: "full@small"
             },
@@ -136,7 +136,7 @@
             width: "full",
             text: "View the pattern library",
             style: "secondary",
-            url: "pattern-lab",
+            url: "/pattern-lab/index.html",
           }
         ]
         },
