--- a/apps/bolt-site/templates/site.twig
+++ b/apps/bolt-site/templates/site.twig
@@ -67,7 +67,7 @@
       {% set isActivePath = page.url starts with currentSection %}
       <a href="/{{ page.url }}" class="{% if isActive %}active{% endif %} {% if isActivePath %}active-path{% endif %}">{{ page.meta.title }}</a>
       {% if loop.first %}
-        <a href="/pattern-lab" target="_blank">Pattern Lab</a>
+        <a href="/pattern-lab/index.html" target="_blank">Pattern Lab</a>
       {% endif %}
     {% endfor %}
 
