--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -248,7 +248,7 @@
         { text: "@bolt/components-image" },
         { text: "@bolt/components-link" },
         { text: "@bolt/components-logo" },
-        { text: "@bolt/components-nav-bar" },
+        { text: "@bolt/components-navbar" },
         { text: "@bolt/components-ordered-list" },
         { text: "@bolt/components-page-footer" },
         { text: "@bolt/components-page-header" },
