fix: fixing linting errors; re-adding @bolt/core dependency to utility classes so JS can compile

--- a/packages/global/styles/07-utilities/_utilities-display.scss
+++ b/packages/global/styles/07-utilities/_utilities-display.scss
@@ -2,6 +2,8 @@
   #FLEX UTILITIES
 \* ------------------------------------ */
 
+@import '@bolt/core';
+
 // Add additional spacing size rules for handling auto and zero'd rules
 $bolt-display-props: (
   'block': 'block',
