--- a/packages/global/styles/07-utilities/_utilities-height.scss
+++ b/packages/global/styles/07-utilities/_utilities-height.scss
@@ -2,6 +2,8 @@
   #VISUALLY HIDDEN UTILITIES
 \* ------------------------------------ */
 
+@import '@bolt/core';
+
 $bolt-height-props: (
   'xxsmall': bolt-spacing(xxsmall),
   'xsmall': bolt-spacing(xsmall),
