--- a/packages/global/styles/07-utilities/_utilities-opacity.scss
+++ b/packages/global/styles/07-utilities/_utilities-opacity.scss
@@ -2,6 +2,8 @@
   #VISUALLY HIDDEN UTILITIES
 \* ------------------------------------ */
 
+@import '@bolt/core';
+
 $bolt-opacity-props: (0, .25, .50, .75, 1);
 
 @mixin bolt-opacity-utils($breakpoint: null) {
