--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-xlong.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-xlong.twig
@@ -2,101 +2,60 @@
   title: "Toggle Menu"
 } %}
   {% block content %}
-    <ul class="c-bolt-nav-list c-bolt-nav-list--xsmall js-bolt-nav-list-gumshoe">
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-f3ff267c-5fb8-4e2f-8682-52663b5437df">Features</a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-12de80d7-1c57-4bef-a173-07d898f8e356">Resources
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-468a47c1-fe65-46d4-b8c7-9dbfe8404ee9">Industry Apps
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a">Customer Success
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-f3ff267c-5fb8-4e2f-8682">Features</a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-12de80d7-1c57-4bef-a173">Resources
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-468a47c1-fe65-46d4-b8c7">Industry Apps
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a">Customer Success
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-f3ff267c-5fb8-4e2f-8682-52663b5437df">Features</a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-12de80d7-1c57-4bef-a173-07d898f8e356">Resources
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-468a47c1-fe65-46d4-b8c7-9dbfe8404ee9">Industry Apps
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a">Customer Success
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-f3ff267c-5fb8-4e2f-8682">Features</a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-12de80d7-1c57-4bef-a173">Resources
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-468a47c1-fe65-46d4-b8c7">Industry Apps
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__item">
-        <bolt-nav-link>
-          <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a">Customer Success
-          </a>
-        </bolt-nav-link>
-      </li>
-      <li class="c-bolt-nav-list__indicator js-bolt-nav-indicator" style="transform: translateX(0px); width: 0px;"></li>
-    </ul>
+
+    {% include "@bolt-components-nav/nav.twig" with {
+    "links": [
+      {
+        "text": "Link 1 Text",
+        "url": "#link-1-url"
+      },
+      {
+        "text": "Link 2 Text",
+        "url": "#link-2-url"
+      },
+      {
+        "text": "Link 3 Text",
+        "url": "#link-3-url"
+      },
+      {
+        "text": "Link 4 Text",
+        "url": "#link-4-url"
+      },
+      {
+        "text": "Link 5 Text",
+        "url": "#link-5-url"
+      },
+      {
+        "text": "Link 6 Text",
+        "url": "#link-6-url"
+      },
+      {
+        "text": "Link 7 Text",
+        "url": "#link-7-url"
+      },
+      {
+        "text": "Link 8 Text",
+        "url": "#link-8-url"
+      },
+      {
+        "text": "Link 9 Text",
+        "url": "#link-9-url"
+      },
+      {
+        "text": "Link 10 Text",
+        "url": "#link-10-url"
+      },
+      {
+        "text": "Link 11 Text",
+        "url": "#link-11-url"
+      },
+      {
+        "text": "Link 12 Text",
+        "url": "#link-12-url"
+      }
+    ]
+  } only %}
+
   {% endblock %}
 {% endembed %}
 
