Standalone PW Video Component + Build Tools Improvements  (#573)
* standalone player start

* video player playing

* create pw-video component

* remove custom pw-video component from core bolt

* change video.js to define custom elements

* rename standalone video site to pw-site

* remove pw component

* change element name of bolt component

* change scss and js classes

* remove unneeded button component

* WIP import mixin for bolt-video

* hotfix: correctly previous ratio object hotfix

* chore: update to use latest manifest updates from master

* refactor: update build tools to support the addition of 2 new (optional) config options: namespace and templatesDir

* refactor: update pw-site and move templates under the `src` directory

* refactor: update Video component to use new bolt namespace config option being exposed

* refactor: update webpack config to export new bolt namespace config; linting auto-cleanup

* chore: clean up pw-site package.json file; add new component pulling in the main bolt video package (but compiling use new build tools namespace)

* chore: version bump with earlier test versions published

* chore: remove drupal-lab from Yarn workspace packages (root of drupal-lab doesn't have a package.json file)

* feat: update PW site to pull in extended ratio object. update ratio to be namespaced. update build tools to prevent rules from getting merged together (causes major IE 11 issues in certain situations). also updating built tools to allow an optional publicPath option to be specified.

* fix: temporarily force all browsers to automatically grab the custom elements polyfill till we have a workaround to handling ES6-supporting browsers that have already loaded the custom-elements-es5-adapter.js polyfill

* chore: version bump

* fix: update Ratio Object to use updated Renderer core + still export a function

* chore: update video player examples to use the lighter-weight Brightcove video pla

--- a/packages/components/bolt-video/src/_video-meta.scss
+++ b/packages/components/bolt-video/src/_video-meta.scss
@@ -3,7 +3,8 @@
 // Same as max-width of wrapper container
 $bolt-video-meta--max-width: bolt-breakpoint(xxlarge);
 
-bolt-video-meta {
+
+#{$bolt-namespace}-video-meta {
   transition: transform 0.2s ease, opacity 0.2s ease;
   transform: translate3d(0, 0, 0);
   opacity: 1;
@@ -15,7 +16,7 @@ bolt-video-meta {
   bottom: 0;
 }
 
-.c-bolt-video-meta__wrapper {
+.c-#{$bolt-namespace}-video-meta__wrapper {
   @include bolt-padding(medium, squished);
   @include bolt-font-size(xsmall);
 
