--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -8,9 +8,10 @@
 $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
 
-bolt-video {
+#{$bolt-namespace}-video {
   display: block;
   width: 100%;
+  background-color: bolt-color(black); // placeholder color before poster loads up.
 
 // Hide the metadata (which covers the controls) if the user is either
 //   a) watching the video
@@ -18,7 +19,7 @@ bolt-video {
   &:hover,
   &.is-playing,
   &:hover.is-paused {
-    bolt-video-meta {
+    #{$bolt-namespace}-video-meta {
       transform: translate3d(0, 100%, 0);
       opacity: 0;
     }
@@ -56,16 +57,16 @@ bolt-video {
       width: 100%;
       height: 100%;
     }
-
   }
 }
+
 
 /**
   * 1. 90vw instead of 100vw so the video close button
   * doesn't spill outside of the video container in IE 11 /
   * on Windows
   */
-.c-bolt-video {
+.c-#{$bolt-namespace}-video {
 
   width: 100%;
   max-width: none;
@@ -77,7 +78,12 @@ bolt-video {
     height: 100%;
   }
 
-  &.c-bolt-video--background {
+  // Higher specificity required to prevent override from Hapyak's CSS loaded
+  .video-js.video-js.video-js {
+    position: absolute;
+  }
+
+  &.c-#{$bolt-namespace}-video--background {
     display: block;
     position: relative;
     max-width: calc(100% - #{bolt-spacing(large)});
@@ -101,9 +107,9 @@ bolt-video {
 
 
 
-.c-bolt-video__close-button {
+.c-#{$bolt-namespace}-video__close-button {
   color: bolt-color(orange);
-  --bolt-theme-icon: bolt-color(orange);
+  --#{$bolt-namespace}-theme-icon: bolt-color(orange);
   position: absolute;
   z-index: bolt-z-index('tooltip');
   top: bolt-spacing(xsmall);
@@ -134,42 +140,42 @@ bolt-video {
   }
 }
 
-.c-bolt-video__close-button--icon-to-text {
+.c-#{$bolt-namespace}-video__close-button--icon-to-text {
   @media (max-width: (bolt-breakpoint(small) - 1px)) {
     display: block;
     position: relative;
     right: 0;
     text-align: right;
-    .c-bolt-video__close-button-icon {
+    .c-#{$bolt-namespace}-video__close-button-icon {
       display: none;
     }
   }
   @media (min-width: bolt-breakpoint(small)) {
     position: absolute;
-    .c-bolt-video__close-button-text {
+    .c-#{$bolt-namespace}-video__close-button-text {
       @include bolt-visuallyhidden;
     }
   }
 }
 
-.c-bolt-video__close-button:not(.c-bolt-video__close-button--icon-to-text) {
-  .c-bolt-video__close-button-text {
+.c-#{$bolt-namespace}-video__close-button:not(.c-#{$bolt-namespace}-video__close-button--icon-to-text) {
+  .c-#{$bolt-namespace}-video__close-button-text {
     @include bolt-visuallyhidden;
   }
 }
 
-.c-bolt-video__close-button-icon,
-.c-bolt-video__close-button-text {
+.c-#{$bolt-namespace}-video__close-button-icon,
+.c-#{$bolt-namespace}-video__close-button-text {
   cursor: pointer;
 }
 
-.c-bolt-video__close-button-text {
+.c-#{$bolt-namespace}-video__close-button-text {
   color: bolt-color(white);
   text-decoration: underline;
 }
 
 
-.c-bolt-video--hide-controls {
+.c-#{$bolt-namespace}-video--hide-controls {
   .video-js .vjs-control-bar {
     display: none;
   }
