Fix Flag Object Alignment (#541)
* fix: unquote alignment options of flag object so vertical alignment works as expected

* Update _objects-flag.scss

--- a/packages/global/styles/05-objects/objects-flag/_objects-flag.scss
+++ b/packages/global/styles/05-objects/objects-flag/_objects-flag.scss
@@ -8,9 +8,9 @@ $bolt-flag-sizes: (
 );
 
 $bolt-flag-alignments: (
-  'top': 'flex-start',
-  'middle': 'center',
-  'bottom': 'flex-end'
+  'top': flex-start,
+  'middle': center,
+  'bottom': flex-end
 );
 
 
