fix: cleanup and misc fixes

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
@@ -1,6 +1,6 @@
 {% include "@bolt-components-dropdown/dropdown.twig" with {
   title: "Example Title",
-  content: include("@bolt-components-nav/nav.twig", {
+  children: include("@bolt-components-nav/nav.twig", {
     "links": [
       {
         "text": "Link 1 Text",
