--- a/packages/components/bolt-dropdown/_dropdown-item.twig
+++ b/packages/components/bolt-dropdown/_dropdown-item.twig
@@ -12,18 +12,18 @@
         {{ title | default("Toggle Dropdown")}}
       </label>
 
-      <a href="#{{ secondaryUUID }}" class="c-bolt-dropdown__header-link c-bolt-dropdown__header-link c-bolt-dropdown__header-link--open">
+      <a href="#{{ primaryUUID }}" class="c-bolt-dropdown__header-link c-bolt-dropdown__header-link c-bolt-dropdown__header-link--open">
         <span class="c-bolt-dropdown__toggle-text">{{ openLabel | default("Open Dropdown")}}</span>
       </a>
 
-      <a href="#{{ primaryUUID }}" class="c-bolt-dropdown__header-link c-bolt-dropdown__header-link--close">
+      <a href="#{{ secondaryUUID }}" class="c-bolt-dropdown__header-link c-bolt-dropdown__header-link--close">
         <span class="c-bolt-dropdown__toggle-text">{{ closeLabel | default("Close Dropdown")}}</span>
       </a>
     </h3>
 
     <div class="c-bolt-dropdown__content">
       <div class="c-bolt-dropdown__content-inner">
-        {{ content }}
+        {{ ( _content ? _content : content) | raw }}
       </div>
     </div>
   </div>
