fix: hotfix to copy to clipboard and dropdown component Travis build

--- a/packages/components/bolt-dropdown/dropdown.scss
+++ b/packages/components/bolt-dropdown/dropdown.scss
@@ -571,7 +571,7 @@ bolt-dropdown {
 
 
 .c-bolt-dropdown__content:not(.c-bolt-dropdown__content--open):not(.c-bolt-dropdown__content--opened) {
-  --bolt-nav-indicator-transform: -100px !important;
+  --bolt-nav-indicator-transform: -100px;
 }
 
 // .c-bolt-dropdown__content--open:not(.c-bolt-dropdown__content--opened) {
