--- a/packages/components/bolt-dropdown/dropdown.scss
+++ b/packages/components/bolt-dropdown/dropdown.scss
@@ -571,7 +571,9 @@ bolt-dropdown {
 
 
 .c-bolt-dropdown__content:not(.c-bolt-dropdown__content--open):not(.c-bolt-dropdown__content--opened) {
-  --bolt-nav-indicator-transform: -100px !important;
+  //--bolt-nav-indicator-transform: -100px !important;
+  // @todo @salem This broke my webpack compile
+  --bolt-nav-indicator-transform: -100px;
 }
 
 // .c-bolt-dropdown__content--open:not(.c-bolt-dropdown__content--opened) {
