--- a/packages/components/bolt-unordered-list/src/unordered-list.twig
+++ b/packages/components/bolt-unordered-list/src/unordered-list.twig
@@ -29,7 +29,7 @@
 
 
 <bolt-{{ componentName }} bolt-component>
-  <ol {{ attributes.addClass(classes) }}>
+  <ul {{ attributes.addClass(classes) }}>
     {% for listItem in contentItems %}
       <li class="{{ "#{baseClass}__item" }}">
         {% if listItem.text %}
@@ -41,5 +41,5 @@
         {% endif %}
       </li>
     {% endfor %}
-  </ol>
+  </ul>
 </bolt-{{ componentName }}>
