--- a/apps/bolt-site/templates/site.scss
+++ b/apps/bolt-site/templates/site.scss
@@ -97,9 +97,27 @@ $storefront-sidebar-width: 320px;
       background: rgba(0, 0, 0, 0.1);
       border: 1px solid #FFF;
       border-radius: 3px;
-      box-shadow: 0 1px 3px rgba(21,22,25,.12), 0 1px 2px rgba(21,22,25,.24);
+      box-shadow: 0 1px 3px rgba(21, 22, 25, .12), 0 1px 2px rgba(21, 22, 25, .24);
+      display: none; // we need more room at mobile and this is the item which makes most sense to exclude since we're already there!
+
+      @include respond-to(small) {
+        display: initial;
+      }
+
       &.active-path {
         text-decoration: none;
+      }
+    }
+
+    &.storefront-docs__hamburger {
+      color: bolt-color(yellow);
+
+      > span {
+        display: none;
+
+        @include respond-to(xsmall) {
+          display: initial;
+        }
       }
     }
   }
