Added close menu toggle to fly out sub-nav

--- a/apps/bolt-site/templates/partials/sub-nav.twig
+++ b/apps/bolt-site/templates/partials/sub-nav.twig
@@ -31,6 +31,12 @@
         name: 'chevron-right'
       }
     } %}
+    <a href="#" class="storefront-docs__close-menu u-bolt-hide@medium">
+      {% include "@bolt-components-icon/icon.twig" with {
+        name: "close",
+        size: "medium",
+      } %}
+    </a>
   {% endif %}
   {{ macros.menu(nestedPages, 1, currentUrl) }}
 </nav>
