--- a/apps/bolt-site/templates/site.scss
+++ b/apps/bolt-site/templates/site.scss
@@ -164,20 +164,31 @@ $storefront-sidebar-width: 320px;
     transform: translate3d(0, 0, 0);
   }
 
-  .sub-nav > h2 {
-    color: #FFF;
-    background-color: bolt-color(indigo);
-    border-bottom: 1px solid #FFF;
-    padding: 10px 20px;
-    margin: 0;
-    font-size: 1.11rem;
+  .sub-nav {
+    position: relative;
 
-    &:before {
-      content: "#";
-      width: 24px;
-      text-align: center;
-      display: inline-block;
-      margin-right: 7px;
+    > h2 {
+      color: #FFF;
+      background-color: bolt-color(indigo);
+      border-bottom: 1px solid #FFF;
+      padding: 10px 20px;
+      margin: 0;
+      font-size: 1.11rem;
+
+      &:before {
+        content: "#";
+        width: 24px;
+        text-align: center;
+        display: inline-block;
+        margin-right: 7px;
+      }
+    }
+
+    .storefront-docs__close-menu {
+      position: absolute;
+      top: 8px;
+      right: 10px;
+      color: bolt-color(yellow);
     }
   }
 }
