Minor adjustment to header nav to center on smaller screens

--- a/apps/bolt-site/templates/site.scss
+++ b/apps/bolt-site/templates/site.scss
@@ -88,6 +88,11 @@ $storefront-sidebar-width: 320px;
   padding: 15px 20px;
   text-align: right;
 
+  @media (max-width: 599px) {
+    text-align: center;
+    width: 100%;
+  }
+
   a {
     color: #FFF;
     padding: 6px 12px;
